# cmake_mixed_toolset

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
cuda/: CMakeLists.txt  foo.cu
intel/: CMakeLists.txt  foo.cpp  foo.h
vs/: CMakeLists.txt  foo.cpp  foo.h
