cmake_minimum_required(VERSION 3.19)
project(Foo CXX)

set(FOO_BINARY_DIR ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/_bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/_bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/_bin)

add_subdirectory(cuda)
add_subdirectory(vs)

#add_subdirectory(intel)

include(ExternalProject)
set(CMAKE_NOOP ${CMAKE_COMMAND} -E echo)
ExternalProject_Add(intel
	CMAKE_ARGS 
		-DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
		-DCMAKE_ARCHIVE_OUTPUT_DIRECTORY=${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
		-DCMAKE_LIBRARY_OUTPUT_DIRECTORY=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/intel
	PREFIX ${CMAKE_BINARY_DIR}
	DOWNLOAD_COMMAND ${CMAKE_NOOP}
	CMAKE_GENERATOR ${CMAKE_GENERATOR}
	CMAKE_GENERATOR_PLATFORM ${CMAKE_GENERATOR_PLATFORM}
	CMAKE_GENERATOR_TOOLSET "Intel C++ Compiler 18.0"
	DEPENDS foo_v140
	INSTALL_COMMAND ${CMAKE_NOOP}
)

add_subdirectory(app)
add_dependencies(app intel)
